erDiagram
    User ||--o{ Place : owns
    User ||--o{ Review : writes
    Place ||--o{ Review : receives
    Place }|--|| User : owned_by
    Place ||--o{ Place_Amenity : has
    Review }|--|| User : written_by
    Review }|--|| Place : about
    Amenity ||--o{ Place_Amenity : available_in

    User {
        UUID id
        STRING first_name
        STRING last_name
        STRING email
        STRING password
        BOOLEAN is_admin
        DATETIME created_at
        DATETIME updated_at
    }

    Place {
        UUID id
        STRING name
        TEXT description
        DECIMAL price
        FLOAT latitude
        FLOAT longitude
        UUID owner_id
        DATETIME created_at
        DATETIME updated_at
    }

    Review {
        UUID id
        TEXT review_text
        INTEGER rating
        UUID user_id
        UUID place_id
        DATETIME created_at
        DATETIME updated_at
    }

    Amenity {
        UUID id
        STRING name
        DATETIME created_at
        DATETIME updated_at
    }

    Place_Amenity {
        UUID place_id
        UUID amenity_id
    }
